    and link with -pie to fix testsuite failure with the new binutils.
  * debian/libc*.symbols*: Remove local __invoke_dynamic_linker__ symbol,
    which no longer shows up in random support libraries' symbol tables.
  * debian/sysdeps/*: Neither ports nor nptl are considered add-ons anymore.
  * debian/debhelper.in/glibc-doc.install: Install changelogs that exist.
  * Other than two hurd-i386 patches required as scaffolding for others,
    all the hurd-i386 patches are disabled, so this build *will* fail there.
  * kfreebsd's sysdeps patches almost certainly need updating for 2.21 too.
  * Failing on testsuite failures is disabled to attempt to get full builds.

 -- Adam Conrad <adconrad@0c3.net>  Fri, 06 Mar 2015 13:47:43 -0700

glibc (2.19-17) unstable; urgency=medium

  [ Adam Conrad ]
  * debian/rules.d/debhelper.mk: Unconditionally create tmp.substvars.
    Closes: #780431.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Mar 2015 10:17:56 +0100

glibc (2.19-16) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: New patch to allow
    libpthread.so to be dynamically loaded from a dlopened library.
  * patches/hurd-i386/cvs-libpthread-libc-lockP{,2}.diff: New patch to
    dynamically call pthread functions from libc.

  [ Aurelien Jarno ]
  * We have a transition mechanism for the locales, as the Debian archive
    used to expose arch:all packages on all architectures even when the
    corresponding arch:any package is not available yet. This has been
    fixed long time ago, the transition mechanism has not been used
    correctly for a lot of time and has been broken by the split out of
    libc-bin. The breakage has been partially fixed by the "Breaks: locales 
    (<< 2.19)" added to libc6. It's now time to add the missing "Depends:
    libc-bin (>> 2.19)" to locales and remove the transition mechanism.
    Closes: #583088, #779442 
  * patches/any/cvs-ldconfig-aux-cache.diff: new patch from upstream to