@@ -2,7 +2,7 @@ diff --git a/sysdeps/unix/sysv/linux/arm/readelflib.c b/sysdeps/unix/sysv/linux/
 index e767f9e..37483fc 100644
 --- a/sysdeps/unix/sysv/linux/arm/readelflib.c
 +++ b/sysdeps/unix/sysv/linux/arm/readelflib.c
-@@ -25,6 +25,130 @@ int process_elf64_file (const char *file_name, const char *lib, int *flag,
+@@ -25,6 +25,131 @@ int process_elf64_file (const char *file_name, const char *lib, int *flag,
  			unsigned int *osversion, char **soname,
  			void *file_contents, size_t file_length);
  
@@ -10,8 +10,8 @@ index e767f9e..37483fc 100644
 +   P incremented past the value.  We assume that a word is large enough to
 +   hold any value so encoded; if it is smaller than a pointer on some target,
 +   pointers should not be leb128 encoded on that target.  */
-+static const unsigned char *
-+read_uleb128 (const unsigned char *p, unsigned long *val)
++static unsigned char *
++read_uleb128 (unsigned char *p, unsigned long *val)
 +{
 +  unsigned int shift = 0;
 +  unsigned char byte;
@@ -86,7 +86,8 @@ index e767f9e..37483fc 100644
 +		   * (ABI_VFP_args) */
 +		  while (section_len > 0)
 +                    {
-+		      unsigned long tag, val;
++		      unsigned long val = 0;
++		      unsigned long tag;
 +		      unsigned long size;
 +
 +		      end = p;
