@@ -38,7 +38,7 @@
    EXTERN struct link_map *_dl_initfirst;
  
 -#if HP_SMALL_TIMING_AVAIL
-+#if HP_SMALL_TIMING_AVAIL || HP_TIMING_PAD
++#if HP_SMALL_TIMING_AVAIL || defined HP_TIMING_PAD
    /* Start time on CPU clock.  */
    EXTERN hp_timing_t _dl_cpuclock_offset;
  #endif
