@@ -94,6 +94,10 @@ glibc (2.21-0experimental0) UNRELEASED; urgency=medium
     which no longer shows up in random support libraries' symbol tables.
   * debian/sysdeps/*: Neither ports nor nptl are considered add-ons anymore.
   * debian/debhelper.in/glibc-doc.install: Install changelogs that exist.
+  * debian/patches/i386/submitted-i686-timing.diff: Fix -Wundef warnings.
+  * debian/patches/arm/unsubmitted-ldso-abi-check.diff: Fix build failures
+    from format mismatches, uninitialised variables, and const conversions.
+  * debian/patches/arm/unsubmitted-ldconfig-cache-abi.diff: Same as above.
   * Other than two hurd-i386 patches required as scaffolding for others,
     all the hurd-i386 patches are disabled, so this build *will* fail there.
   * kfreebsd's sysdeps patches almost certainly need updating for 2.21 too.
